<resources>
    <string name="app_name">SMSSDK</string>
    <string name="smssdk_bind_mobile_show">手机号验证</string>
    <string name="smssdk_contact">通讯录好友</string>
    <string name="smssdk_appkey_dialog_title">请输入您的应用信息</string>
    <string name="smssdk_appkey">AppKey</string>
    <string name="smssdk_appkey_hint">请输入您的AppKey</string>
    <string name="smssdk_appsecret">AppSecret</string>
    <string name="smssdk_appsecrethint">请输入您的AppSecret</string>
	<string name="smssdk_dont_use_demo_appkey">此APPKEY仅供测试使用，且不定期失效，请到mob.com后台申请正式APPKEY</string>
	<string name="smsdemo_network_error">网络异常，请稍后重试</string>

    <!-- 新版-->
    <string name="smssdk_start_verify">开始验证</string>
	<string name="smssdk_default_country">中国</string>
    <string name="smssdk_sms_verify">短信验证</string>
    <string name="smssdk_audio_verify">语音验证</string>
    <string name="smssdk_get_code">获取验证码</string>
    <string name="smssdk_verify">验证</string>
    <string name="smssdk_error_hint">验证码错误</string>
    <string name="smssdk_busy_hint">操作频繁请稍等</string>
    <string name="smssdk_login_success">登录成功</string>
    <string name="smssdk_login_failure">喔噢，登录失败</string>
    <string name="smssdk_service_title">本服务由MobTech SDK提供</string>
    <string name="smssdk_failure_title">请检查4G网络链接\n超时未授权登录</string>
    <string name="smssdk_verify_again">再次验证</string>
    <string name="smssdk_customer_service">客服电话：400-685-2216</string>
    <string name="smssdk_advise">咨询客服</string>
    <string name="smssdk_version">当前版本：v%1$s</string>

	<!-- 隐私协议弹框 -->
	<string name="smsdemo_authorize_dialog_title">服务授权</string>
	<string name="smsdemo_authorize_dialog_content">欢迎您使用MobTech提供的演示DEMO，SMSSDK为开发者提供完全免费的短信验证码服务，顶级通道3秒下发，适用于登录注册、找回密码、支付认证等场景。我们将依据MobTech的《隐私政策》来帮助你了解我们需要收集哪些数据。请您详细查看我们的隐私政策，详见</string>
	<string name="smsdemo_authorize_dialog_reject">拒绝</string>
	<string name="smsdemo_authorize_dialog_accept">同意</string>
</resources>
