<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="20dp"
	android:background="@drawable/smsdemo_authorize_dialog_bg">
	<TextView
		android:id="@+id/smsdemo_authorize_dialog_title_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:maxLines="2"
		android:textStyle="bold"
		android:textSize="18dp"
		android:textColor="#202122"
		android:text="@string/smsdemo_authorize_dialog_title"/>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:layout_marginTop="20dp"
		android:scrollbarThumbVertical="@null">
		<TextView
			android:id="@+id/smsdemo_authorize_dialog_content_tv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="14dp"
			android:textColor="#555555"
			android:text="@string/smsdemo_authorize_dialog_content"/>
	</ScrollView>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:layout_marginTop="20dp"
		android:gravity="center_vertical">
		<TextView
			android:id="@+id/smsdemo_authorize_dialog_reject_tv"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:background="@drawable/smsdemo_authorize_bottom_left_round_btn"
			android:textSize="18dp"
			android:textColor="#202122"
			android:text="@string/smsdemo_authorize_dialog_reject"/>
		<TextView
			android:id="@+id/smsdemo_authorize_dialog_accept_tv"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="20dp"
			android:gravity="center"
			android:background="@drawable/smsdemo_authorize_bottom_right_round_btn"
			android:textSize="18dp"
			android:textColor="#FFFFFF"
			android:text="@string/smsdemo_authorize_dialog_accept"/>
	</LinearLayout>
</LinearLayout>
