<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/smssdk_success_bg"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/smssdk_success" />

        <TextView
            android:id="@+id/tvStatusHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/smssdk_login_success"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/smssdk_service_title"
        android:textColor="@color/smssdk_686868"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvVerifyAgain"
        android:layout_width="255dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/smssdk_corner_green_bg"
        android:gravity="center"
        android:text="@string/smssdk_verify_again"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/smssdk_686868"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/smssdk_advise"
        android:textColor="@color/smssdk_686868"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="46dp"
            android:src="@drawable/smssdk_advise_phone" />

        <ImageView
            android:id="@+id/ivQQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/smssdk_advise_qq" />
    </LinearLayout>
</LinearLayout>