<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:gravity="center_vertical"
        android:padding="10dip"
        android:text="@string/smssdk_appkey_dialog_title"
        android:textColor="#ff3cac17"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ff3cac17" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minEms="6"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:singleLine="true"
                android:text="@string/smssdk_appkey"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_appkey"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/smssdk_input_bg_focus"
                android:hint="@string/smssdk_appkey_hint"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minEms="6"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:singleLine="true"
                android:text="@string/smssdk_appsecret"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_appsecret"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/smssdk_input_bg_focus"
                android:hint="@string/smssdk_appsecrethint"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ff737373" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_marginLeft="1dip"
            android:layout_weight="1"
            android:background="@drawable/smssdk_dialog_btn_back"
            android:padding="10dip"
            android:text="@string/smssdk_ok"
            android:textColor="#ffffff" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#ff737373" />

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_marginRight="1dip"
            android:layout_weight="1"
            android:background="@drawable/smssdk_dialog_btn_back"
            android:padding="10dip"
            android:text="@string/smssdk_cancel"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>